Don't try to use Meteor when running unit tests

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "start-af-second": "scripts/useMeteor.sh && MONGO_URL=mongodb://localhost:3001/meteor meteor --settings settings-af.json --port 3030",
     "start-af-prod-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-af-proddb.sh",
     "debug-af": "scripts/useMeteor.sh && meteor --settings settings-af.json --inspect run",
-    "test-watch": "scripts/useMeteor.sh && TEST_WATCH=1 meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings sample_settings.json --port 3200 --full-app",
-    "test": "scripts/useMeteor.sh && meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings sample_settings.json --port 3200 --full-app --once",
-    "test-prod": "scripts/useMeteor.sh && meteor test-packages ./packages/lesswrong --driver-package meteortesting:mocha --exclude-archs web.browser.legacy --settings settings.json --port 3200 --full-app --once",
+    "test-watch": "cd express && yarn run test-watch",
+    "test": "cd express && yarn run test",
     "encrypt-credentials": "tar czf credentials.tar.gz --exclude '.git/*' -C ../ ./LessWrong-Credentials; travis encrypt-file credentials.tar.gz --add; rm credentials.tar.gz",
     "generate": "scripts/generateTypes.sh",
     "rebuild-reinstall-ckeditor": "cd ./public/lesswrong-editor && yarn install && yarn run build && cd ../.. && yarn add ./public/lesswrong-editor",
