--- a/express/package.json
+++ b/express/package.json
@@ -6,8 +6,6 @@
     "start": "../scripts/useExpress.sh && ./build.js -run -watch --settings ../settings.json",
     "start-dev-db": "../scripts/useExpress.sh && ./build.js -run --watch --mongoUrlFile ../../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../../LessWrong-Credentials/settings-local-dev-devdb.json",
     "start-prod-db": "../scripts/useExpress.sh && ./build.js -run --watch --mongoUrlFile ../../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../../LessWrong-Credentials/settings-local-dev-proddb.json",
-    "build:prod": "export NODE_ENV=development && webpack -p",
-    "start:prod": "export NODE_ENV=development && nodemon --ignore './build/' --exec 'yarn run build && node -- build/server/js/serverBundle.js'",
     "test": "jest",
     "test-watch": "jest --watchAll"
   },
@@ -189,8 +187,7 @@
     "underscore": "^1.9.1",
     "universal-cookie": "^4.0.2",
     "universal-cookie-express": "^2.2.0",
-    "url": "^0.11.0",
-    "webpack-node-externals": "^2.5.2"
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -221,14 +218,9 @@
     "eslint-plugin-meteor": "^5.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
-    "nodemon": "2.0.4",
-    "speed-measure-webpack-plugin": "^1.3.3",
     "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.5",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0"
+    "ts-loader": "^8.0.5"
   },
   "resolutions": {
     "graphql": "^14.0.0",
