--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
   "name": "LessWrong",
-  "version": "2.0.0",
-  "engines": {
-    "npm": "^3.0"
-  },
+  "version": "2.1.0",
   "scripts": {
     "checktypes": "scripts/lint_and_checktypes.sh",
     "lint": "scripts/lint_and_checktypes.sh",
     "tsc": "tsc --noEmit --skipLibCheck",
     "eslint": "eslint --max-warnings 0 --cache --ext .jsx,js,tsx,ts packages",
-    "prestart": "bash prestart_lesswrong.sh",
-    "start": "scripts/useMeteor.sh && meteor --exclude-archs web.browser.legacy --settings settings-dev.json",
-    "start-prod-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-proddb.sh",
-    "start-dev-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-devdb.sh",
-    "debug": "scripts/useMeteor.sh && meteor --settings settings-dev.json --inspect run",
-    "start-af": "scripts/useMeteor.sh && meteor --settings settings-af.json",
-    "start-af-dev-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-af-devdb.sh",
-    "start-af-second": "scripts/useMeteor.sh && MONGO_URL=mongodb://localhost:3001/meteor meteor --settings settings-af.json --port 3030",
-    "start-af-prod-db": "scripts/useMeteor.sh && ../LessWrong-Credentials/run-local-dev-af-proddb.sh",
-    "debug-af": "scripts/useMeteor.sh && meteor --settings settings-af.json --inspect run",
-    "test-watch": "cd express && yarn run test-watch",
-    "test": "cd express && yarn run test",
+    "build": "./build.js",
+    "start": "./build.js -run -watch --settings settings.json",
+    "start-dev-db": "./build.js -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../LessWrong-Credentials/settings-local-dev-devdb.json",
+    "start-prod-db": "./build.js -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../LessWrong-Credentials/settings-local-dev-proddb.json",
+    "start-af": "./build.js -run --watch --settings settings-af.json",
+    "start-af-dev-db": "./build.js -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../LesWrong-Credentials/settings-local-dev-af-devdb.json",
+    "start-af-prod-db": "./build.js -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../LesWrong-Credentials/settings-local-dev-af-proddb.json",
+    "test": "jest",
+    "test-watch": "jest --watchAll",
     "encrypt-credentials": "tar czf credentials.tar.gz --exclude '.git/*' -C ../ ./LessWrong-Credentials; travis encrypt-file credentials.tar.gz --add; rm credentials.tar.gz",
     "generate": "scripts/generateTypes.sh",
     "rebuild-reinstall-ckeditor": "cd ./public/lesswrong-editor && yarn install && yarn run build && cd ../.. && yarn add ./public/lesswrong-editor",
@@ -29,9 +23,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.0",
-    "@babel/runtime": "^7.7.7",
-    "@ckeditor/ckeditor5-build-balloon-block": "./public/lesswrong-editor",
+    "@babel/runtime": "^7.12.1",
     "@google/maps": "^0.5.5",
+    "@googlemaps/google-maps-services-js": "^3.1.13",
     "@lesswrong/lesswrong-editor": "./public/lesswrong-editor",
     "@material-ui/core": "3.1.2",
     "@material-ui/icons": "^3.0.0",
@@ -40,6 +34,7 @@
     "@sentry/core": "^5.12.4",
     "@sentry/integrations": "^5.12.4",
     "@sentry/node": "^5.12.4",
+    "@std/esm": "^0.26.0",
     "@stripe/stripe-js": "^1.11.0",
     "@types/chai-as-promised": "^7.1.2",
     "@types/cheerio": "0.22.16",
@@ -52,6 +47,7 @@
     "@types/gapi": "0.0.39",
     "@types/html-to-text": "^5.1.0",
     "@types/htmlparser2": "^3.10.1",
+    "@types/jest": "^26.0.19",
     "@types/jsdom": "^16.2.1",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/lodash": "^4.14.150",
@@ -87,7 +83,6 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
     "bowser": "^1.9.4",
-    "bson-ext": "^2.0.3",
     "cheerio": "^0.22",
     "classnames": "^2.2.6",
     "cloudinary-core": "2.5.0",
@@ -117,11 +112,14 @@
     "enzyme": "3.1.0",
     "enzyme-adapter-react-16": "1.0.1",
     "escape-string-regexp": "^1.0.5",
-    "express": "^4.16.3",
+    "estrella": "https://github.com/jimrandomh/estrella",
+    "express": "5.0.0-alpha.8",
     "feedparser-promised": "^1.2.2",
-    "graphql": "^14.5.8",
+    "graphql": "^14.0.0",
     "graphql-date": "^1.0.2",
+    "graphql-server-express": "^0.6.0",
     "graphql-tag": "^2.9.2",
+    "graphql-tools": "^3.0.5",
     "graphql-type-json": "^0.1.4",
     "graphql-voyager": "^1.0.0-rc.26",
     "he": "^1.1.1",
@@ -149,6 +147,7 @@
     "mathjax-node-page": "3.2.0",
     "mingo": "^2.2.11",
     "moment": "^2.22.2",
+    "mongodb": "^3.6.3",
     "mz": "^2.7.0",
     "papaparse": "^4.6.2",
     "passport": "^0.4.1",
@@ -157,25 +156,27 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "path-to-regexp": "^6.2.0",
     "pg": "^6.1.5",
     "pg-promise": "^5.6.7",
     "prop-types": "^15.7.2",
     "qs": "6.7.0",
     "raf": "3.4.1",
-    "react": "16.8.0",
+    "react": "16.13.1",
     "react-autosuggest": "^9.4.0",
     "react-bootstrap": "1.0.0-beta.14",
     "react-cookie": "^4.0.1",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-datetime": "^3.0.4",
-    "react-dom": "^16.8.0",
+    "react-datetime": "^2.15.0",
+    "react-dom": "16.13.1",
     "react-geosuggest": "^2.8.0",
-    "react-helmet": "^6.0.0-beta",
+    "react-helmet": "^6.1.0",
     "react-instantsearch": "^6.1.0",
-    "react-instantsearch-dom": "^6.1.0",
+    "react-instantsearch-core": "^6.8.1",
+    "react-instantsearch-dom": "^6.8.1",
     "react-intercom": "^1.0.13",
     "react-jss": "^8.1.0",
-    "react-map-gl": "^5.0.10",
+    "react-map-gl": "^5.2.9",
     "react-no-ssr": "^1.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -185,7 +186,10 @@
     "request": "^2.88.0",
     "rss": "^1.2.1",
     "sanitize-html": "^1.18.2",
+    "setimmediate": "^1.0.5",
+    "shallowequal": "^1.1.0",
     "simpl-schema": "^1.5.0",
+    "source-map-support": "^0.5.19",
     "speakingurl": "^9.0.0",
     "stripe": "^8.126.0",
     "tlds": "^1.203.1",
@@ -197,28 +201,26 @@
     "universal-cookie-express": "^2.2.0",
     "url": "^0.11.0"
   },
-  "resolutions": {
-    "**/cloudinary-core": "2.5.0",
-    "popper.js": "1.15.0",
-    "prop-types": "15.7.2",
-    "react-is": "16.12.0",
-    "tslib": "1.10.0"
-  },
-  "private": true,
   "devDependencies": {
-    "@babel/core": "7.7.7",
-    "@babel/preset-env": "7.7.7",
-    "@babel/register": "^7.0.0",
-    "@ckeditor/ckeditor5-inspector": "^1.3.0",
+    "@babel/core": "7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-transform-react-jsx": "^7.12.11",
+    "@babel/plugin-transform-runtime": "7.11.5",
+    "@babel/preset-env": "7.11.5",
+    "@babel/preset-react": "7.10.4",
+    "@babel/preset-typescript": "^7.12.1",
     "@graphql-codegen/cli": "^1.9.1",
     "@graphql-codegen/fragment-matcher": "^1.9.0",
     "@graphql-codegen/introspection": "^1.9.0",
+    "@shelf/jest-mongodb": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
-    "autoprefixer": "^6.3.6",
-    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "esbuild": "^0.8.27",
+    "esbuild-loader": "^2.6.1",
     "eslint": "^7.14.0",
     "eslint-config-ckeditor5": "^3.1.0",
     "eslint-config-meteor": "^0.1.1",
@@ -228,15 +230,13 @@
     "eslint-plugin-meteor": "^5.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "1.9.2"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.5"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {
-        "browsers": [
-          "last 2 versions"
-        ]
-      }
-    }
+  "resolutions": {
+    "graphql": "^14.0.0",
+    "graphql-tools": "4.0.7",
+    "esbuild": "0.8.22"
   }
 }
