Hook up postinstall script to warn you about dependency problems

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "LessWrong",
   "version": "2.1.0",
   "scripts": {
+    "postinstall": "scripts/postinstall.sh",
     "checktypes": "scripts/lint_and_checktypes.sh",
     "lint": "scripts/lint_and_checktypes.sh",
     "tsc": "tsc --noEmit --skipLibCheck",
