--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [15.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -25,4 +25,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn
-    - run: node --max_old_space_size=4096 ./node_modules/.bin/jest --forceExit --runInBand
+    - run: node --max_old_space_size=4096 ./node_modules/.bin/jest --forceExit
