Import some DefinitelyTyped definitions

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@sentry/node": "^5.12.4",
     "@std/esm": "^0.26.0",
     "@stripe/stripe-js": "^1.11.0",
+    "@types/algoliasearch": "^3.34.11",
+    "@types/bcrypt": "^3.0.0",
     "@types/chai-as-promised": "^7.1.2",
     "@types/cheerio": "0.22.16",
     "@types/classnames": "^2.2.9",
@@ -72,6 +74,7 @@
     "@types/react-map-gl": "^5.2.2",
     "@types/react-no-ssr": "^1.1.1",
     "@types/recompose": "^0.30.7",
+    "@types/request": "^2.48.5",
     "@types/sanitize-html": "^1.22.0",
     "@types/speakingurl": "^13.0.2",
     "@types/underscore": "1.9.4",
