--- a/package.json
+++ b/package.json
@@ -119,11 +119,11 @@
     "estrella": "https://github.com/jimrandomh/estrella",
     "express": "5.0.0-alpha.8",
     "feedparser-promised": "^1.2.2",
-    "graphql": "^14.0.0",
+    "graphql": "^15.4.0",
     "graphql-date": "^1.0.2",
     "graphql-server-express": "^0.6.0",
     "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.5",
+    "graphql-tools": "^4.0.7",
     "graphql-type-json": "^0.1.4",
     "graphql-voyager": "^1.0.0-rc.26",
     "he": "^1.1.1",
@@ -239,8 +239,7 @@
     "ts-loader": "^8.0.5"
   },
   "resolutions": {
-    "graphql": "^14.0.0",
-    "graphql-tools": "4.0.7",
-    "esbuild": "0.8.22"
+    "graphql": "^15.4.0",
+    "graphql-tools": "^4.0.7"
   }
 }
