--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@ yarn-error.log
 # Created by @shelf/jest-mongodb
 globalConfig.json
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
