Run on `tryDeploying`

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ expressNotMeteor ]
+    branches: [ expressNotMeteor, tryDeploying ]
   pull_request:
     branches: [ expressNotMeteor ]
 
