--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,10 +31,10 @@ jobs:
     strategy:
       node-version: [15.x]
     steps:
-      uses: hmanzur/actions-aws-eb@v1
-    with:
-      command: 'deploy ${{ secrets.ENVIRONMENT_NAME }}'
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: "us-east-1"
+    - uses: hmanzur/actions-aws-eb@v1
+      with:
+        command: 'deploy ${{ secrets.ENVIRONMENT_NAME }}'
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: "us-east-1"
