--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,7 @@ jobs:
       matrix: 
         node-version: [15.x]
     steps:
+    - uses: actions/checkout@v2
     - uses: hmanzur/actions-aws-eb@v1.0.0
       with:
         command: 'deploy ${{ secrets.ENVIRONMENT_NAME }}'
