Try again, I guess

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -4,6 +4,9 @@ branch-defaults:
   tryDeploying:
     environment: LessWrong2Express-dev3
 environment-defaults:
+  LessWrong2Express-dev:
+    branch: null
+    repository: null
   LessWrong2Express-dev3:
     branch: null
     repository: null
