--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ yarn-error.log
 
 # Created by @shelf/jest-mongodb
 globalConfig.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
