--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,10 +33,11 @@ jobs:
         node-version: [15.x]
     steps:
     - uses: actions/checkout@v2
-    - uses: hmanzur/actions-aws-eb@v1.0.0
-      with:
-        command: 'deploy ${{ secrets.ENVIRONMENT_NAME }} --debug'
-      env:
+    - run: pip install --upgrade pip awsebcli
+    - name: Run EB Deploy
+      run: eb deploy ${{ secrets.ENVIRONMENT_NAME }} --debug
+      env: 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: "us-east-1"
+        
