--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,9 @@ jobs:
         node-version: [15.x]
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '>=3.5' # Version range or exact version of a Python version to use, using SemVer's version range syntax
     - run: pip install --upgrade pip awsebcli
     - name: Run EB Deploy
       run: eb deploy ${{ secrets.ENVIRONMENT_NAME }} --debug
