--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
 node_modules
 npm-debug.log
-yarn-debug.log# Elastic Beanstalk Files
+yarn-debug.log
+# Elastic Beanstalk Files
 .elasticbeanstalk/*
 .git
 .gitignore
