--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "apollo-errors": "^1.9.0",
     "apollo-server": "2.15.0",
     "apollo-server-express": "2.15.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
     "bowser": "^1.9.4",
     "cheerio": "^0.22",
