--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@std/esm": "^0.26.0",
     "@stripe/stripe-js": "^1.11.0",
     "@types/algoliasearch": "^3.34.11",
+    "@types/bcrypt": "^3.0.0",
     "@types/chai-as-promised": "^7.1.2",
     "@types/cheerio": "0.22.16",
     "@types/classnames": "^2.2.9",
