--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '>=3.5' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-    - run: pip install --upgrade pip awsebcli
+    - run: pip3 install --upgrade pip awsebcli
     - name: Run EB Deploy
       run: eb deploy ${{ secrets.ENVIRONMENT_NAME }}
       env: 
