--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "bson-ext": "^2.0.3",
     "cheerio": "^0.22",
     "classnames": "^2.2.6",
+    "cloudinary": "^1.23.0",
     "cloudinary-core": "2.5.0",
     "cloudinary-react": "1.0.6",
     "compression": "^1.7.3",
