--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "start": "./build.js -run -watch --settings settings.json",
     "start-dev-db": "./build.js -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../LessWrong-Credentials/settings-local-dev-devdb.json",
     "start-prod-db": "./build.js -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../LessWrong-Credentials/settings-local-dev-proddb.json",
+    "shell": "./build.js -run --settings settings.json --shell",
+    "shell-dev-db": "./build.js -run --mongoUrlFile ../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../LessWrong-Credentials/settings-local-dev-devdb.json --shell",
+    "shell-prod-db": "./build.js -run --mongoUrlFile ../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../LessWrong-Credentials/settings-local-dev-proddb.json --shell",
     "start-af": "./build.js -run --watch --settings settings-af.json",
     "start-af-dev-db": "./build.js -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../LesWrong-Credentials/settings-local-dev-af-devdb.json",
     "start-af-prod-db": "./build.js -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../LesWrong-Credentials/settings-local-dev-af-proddb.json",
