--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "body-parser": "^1.18.3",
     "bowser": "^1.9.4",
     "cheerio": "^0.22",
+    "chokidar": "^3.5.0",
     "classnames": "^2.2.6",
     "cloudinary-core": "2.5.0",
     "cloudinary-react": "1.0.6",
