New deployment changes, let's see how it goes

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,12 @@
 branch-defaults:
-  tryDeploying:
+  expressNotMeteor:
     environment: LessWrong2Express-dev4
+    group_suffix: null
+  devel:
+    environment: LessestWrong
+    group_suffix: null
+  deployLessestWrong: 
+    environment: LessestWrong
     group_suffix: null
 global:
   application_name: LessWrongExpress
