--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ expressNotMeteor, tryDeploying ]
+    branches: [ expressNotMeteor, tryDeploying, deployLessestWrong, devel ]
 
 jobs:
   build:
@@ -36,7 +36,7 @@ jobs:
         python-version: '>=3.5' # Version range or exact version of a Python version to use, using SemVer's version range syntax
     - run: pip3 install --upgrade pip awsebcli
     - name: Run EB Deploy
-      run: eb deploy ${{ secrets.ENVIRONMENT_NAME }}
+      run: eb deploy
       env: 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
