Pushes to expressNotMeteor branch update lessestwrong.com instead of baserates.org

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   expressNotMeteor:
-    environment: LessWrong2Express-dev4
+    environment: Lessestwrong
     group_suffix: null
   devel:
     environment: LessestWrong
