--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,43 +1,80 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+- name: Deploy Devel
+  on:
+    push:
+      branches: [ expressNotMeteor, tryDeploying, deployLessestWrong, devel ]
+  jobs:
+    build:
+      runs-on: ubuntu-latest
+  
+      strategy:
+        matrix:
+          node-version: [15.x]
+          environment: [LessestWrong, LessWrong2Express-dev4]
+  
+      steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn
+      - run: yarn run test-ci
+    deploy: 
+      runs-on: ubuntu-latest
+      strategy:
+        matrix: 
+          node-version: [15.x]
+      steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '>=3.5' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+      - run: pip3 install --upgrade pip awsebcli
+      - name: Run EB Deploy
+        run: eb deploy ${{ matrix.environment }}
+        env: 
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: "us-east-1"
+- name: Deploy Master
+  on:
+    push:
+      branches: [ master ]
+  jobs:
+    build:
+      runs-on: ubuntu-latest
+  
+      strategy:
+        matrix:
+          node-version: [15.x]
+          environment: [LessWrongProd, AlignmentForumProd]
+  
+      steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn
+      - run: yarn run test-ci
+    deploy: 
+      runs-on: ubuntu-latest
+      strategy:
+        matrix: 
+          node-version: [15.x]
+      steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '>=3.5' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+      - run: pip3 install --upgrade pip awsebcli
+      - name: Run EB Deploy
+        run: eb deploy ${{ matrix.environment }}
+        env: 
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: "us-east-1"
 
-on:
-  push:
-    branches: [ expressNotMeteor, tryDeploying, deployLessestWrong, devel ]
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [15.x]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn
-    - run: yarn run test-ci
-  deploy: 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: 
-        node-version: [15.x]
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '>=3.5' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-    - run: pip3 install --upgrade pip awsebcli
-    - name: Run EB Deploy
-      run: eb deploy
-      env: 
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: "us-east-1"
