--- a/.github/workflows/deployMaster.yaml
+++ b/.github/workflows/deployMaster.yaml
@@ -33,7 +33,7 @@ jobs:
         python-version: '>=3.5' # Version range or exact version of a Python version to use, using SemVer's version range syntax
     - run: pip3 install --upgrade pip awsebcli
     - name: Run EB Deploy
-      run: eb deploy ${{ matrix.environment }}
+      run: eb deploy --timeout 20 ${{ matrix.environment }}
       env: 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
