--- a/.github/workflows/deployDevel.yaml
+++ b/.github/workflows/deployDevel.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix: 
         node-version: [15.x]
-        environment: [LessestWrong, LessWrong2Express-dev4]
+        environment: [LessestWrong]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
