--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/node": "12",
     "@types/node-fetch": "^2.5.6",
     "@types/papaparse": "^5.0.3",
+    "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.6",
     "@types/pg": "^7.14.3",
     "@types/qs": "6.9.1",
