Add types for simpl-schema, typecast over some rough spots

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/request": "^2.48.5",
     "@types/rss": "^0.0.28",
     "@types/sanitize-html": "^1.22.0",
+    "@types/simpl-schema": "^1.10.4",
     "@types/speakingurl": "^13.0.2",
     "@types/turndown": "^5.0.0",
     "@types/underscore": "1.9.4",
