--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,6 +2,8 @@ branch-defaults:
   ea-dev:
     environment: EAForum-Staging
     group_suffix: null
+  mergeLWMaster:
+    environment: EAForum-Staging-2
 global:
   application_name: EAForum
   branch: null
