--- a/.github/workflows/deployDevel.yaml
+++ b/.github/workflows/deployDevel.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix: 
         node-version: [15.x]
-        environment: [EAForum-Staging]
+        environment: [EAForum-Staging-2]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -24,4 +24,3 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: "us-east-1"
-
