--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/draft-js": "^0.10.40",
     "@types/enzyme": "^3.10.5",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.3",
     "@types/gapi": "0.0.39",
     "@types/html-to-text": "^5.1.0",
     "@types/htmlparser2": "^3.10.1",
@@ -78,6 +79,10 @@
     "@types/node": "12",
     "@types/node-fetch": "^2.5.6",
     "@types/papaparse": "^5.0.3",
+    "@types/passport": "^1.0.5",
+    "@types/passport-auth0": "^1.0.4",
+    "@types/passport-facebook": "^2.1.10",
+    "@types/passport-github2": "^1.2.4",
     "@types/passport-google-oauth20": "^2.0.6",
     "@types/pg": "^7.14.3",
     "@types/qs": "6.9.1",
@@ -136,6 +141,7 @@
     "escape-string-regexp": "^1.0.5",
     "estrella": "https://github.com/jimrandomh/estrella#987656e624f6216d2596953f282beee7b6523d2d",
     "express": "5.0.0-alpha.8",
+    "express-session": "^1.17.1",
     "feedparser-promised": "^1.2.2",
     "graphql": "^14.5.8",
     "graphql-date": "^1.0.2",
@@ -174,6 +180,7 @@
     "nodemailer": "^6.4.17",
     "papaparse": "^4.6.2",
     "passport": "^0.4.1",
+    "passport-auth0": "^1.4.0",
     "passport-custom": "^1.1.1",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
