--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/algoliasearch": "^3.34.11",
     "@types/bcrypt": "^3.0.0",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/cheerio": "0.22.16",
+    "@types/cheerio": "^0.22.28",
     "@types/classnames": "^2.2.9",
     "@types/cookie-parser": "^1.4.2",
     "@types/crypto-js": "^3.1.44",
@@ -103,7 +103,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
     "bowser": "^1.9.4",
-    "cheerio": "^0.22",
+    "cheerio": "1.0.0-rc.9",
     "chokidar": "^3.5.0",
     "classnames": "^2.2.6",
     "cloudinary": "^1.23.0",
