--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "cloudinary-core": "2.5.0",
     "cloudinary-react": "1.0.6",
     "compression": "^1.7.3",
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
     "dataloader": "^1.4.0",
