types are good, pre-testing checkpoint

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@std/esm": "^0.26.0",
     "@stripe/stripe-js": "^1.11.0",
     "@types/algoliasearch": "^3.34.11",
+    "@types/auth0": "^2.33.3",
     "@types/bcrypt": "^3.0.0",
     "@types/chai-as-promised": "^7.1.2",
     "@types/cheerio": "0.22.16",
@@ -104,6 +105,7 @@
     "apollo-errors": "^1.9.0",
     "apollo-server": "2.15.0",
     "apollo-server-express": "2.15.0",
+    "auth0": "^2.35.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
     "bowser": "^1.9.4",
