--- a/package.json
+++ b/package.json
@@ -263,7 +263,7 @@
     "@graphql-codegen/cli": "^1.9.1",
     "@graphql-codegen/fragment-matcher": "^1.9.0",
     "@graphql-codegen/introspection": "^1.9.0",
-    "@shelf/jest-mongodb": "^1.2.3",
+    "@shelf/jest-mongodb": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -278,6 +278,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "mongodb-memory-server": "7.3.6",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.5"
   },
