--- a/package.json
+++ b/package.json
@@ -270,11 +270,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "cypress": "^8.3.0",
     "esbuild": "^0.8.31",
     "esbuild-loader": "^2.6.1",
     "eslint": "^7.14.0",
     "eslint-config-ckeditor5": "^3.1.0",
     "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
