--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
     "path-to-regexp": "^1.2.0",
     "pg": "^8.5.1",
     "pg-promise": "^10.10.2",
+    "pg-testdb": "^1.0.4",
     "prop-types": "^15.7.2",
     "qs": "6.7.0",
     "raf": "3.4.1",
