--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -1,16 +1,21 @@
 name: With server
 on: [push]
 jobs:
-  cypress-run:
-    runs-on: ubuntu-20.04
+  buildAndRunCypressTests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [15.x]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.6.0
-        with:
-          mongodb-port: 27017
-      - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:
-          start: yarn ea-start-cypress
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: yarn install
+      run: yarn install
+
+    - name: Cypress run
+      uses: cypress-io/github-action@v2
+      with:
+          start: yarn ea-start-cypress-db
