--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -7,6 +7,9 @@ jobs:
       matrix:
         node-version: [15.x]
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -15,5 +18,7 @@ jobs:
     - name: yarn install
       run: yarn install
 
-    - name: start server
-      run: ls ..
+    - name: Cypress run
+      uses: cypress-io/github-action@v2
+      with:
+          start: yarn ea-start-cypress-db
