--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -21,4 +21,4 @@ jobs:
     - name: Cypress run
       uses: cypress-io/github-action@v2
       with:
-          start: yarn ea-start-in-memory-db
+          start: yarn ea-start-memory-db
