--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -6,6 +6,8 @@ jobs:
     strategy:
       matrix:
         node-version: [15.x]
+    environment:
+      name: eaforum-testing
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -20,5 +22,7 @@ jobs:
 
     - name: Cypress run
       uses: cypress-io/github-action@v2
+      env:
+        MONGO_URL: ${{ secrets.MONGO_URL }}
       with:
-          start: yarn ea-start-memory-db
+          start: yarn ea-start
