--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "compression": "^1.7.3",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.3",
+    "cross-env": "^7.0.3",
     "crypto-js": "^3.1.9-1",
     "dataloader": "^1.4.0",
     "deepmerge": "^1.2.0",
