--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -25,3 +25,11 @@ jobs:
       with:
           start: yarn ea-start-testing-db
           command: yarn ea-cypress-run
+
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: cypress
+        path: |
+          cypress/screenshots
+          cypress/videos
