--- a/package.json
+++ b/package.json
@@ -233,6 +233,7 @@
     "react-router-dom": "^5.2.0",
     "react-sortable-hoc": "^1.10.1",
     "react-test-renderer": "^16.8.0",
+    "recharts": "^2.1.4",
     "recompose": "^0.26.0",
     "request": "^2.88.0",
     "rss": "^1.2.1",
@@ -251,8 +252,8 @@
     "underscore": "^1.12.1",
     "universal-cookie": "^4.0.2",
     "universal-cookie-express": "^2.2.0",
-    "uuid": "^7.0.0",
     "url": "^0.11.0",
+    "uuid": "^7.0.0",
     "ws": "^7.4.6"
   },
   "devDependencies": {
