--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -29,7 +29,7 @@ jobs:
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
-        name: cypress
+        name: Upload artifacts
         path: |
           cypress/screenshots
           cypress/videos
