Add footnote plugin

--- a/public/lesswrong-editor/package.json
+++ b/public/lesswrong-editor/package.json
@@ -95,5 +95,8 @@
   "eslintIgnore": [
     "build/**",
     "packages/**"
-  ]
+  ],
+  "dependencies": {
+    "ckeditor5-footnote": "^0.1.0"
+  }
 }
