need separate CEA aws access keys

--- a/.github/workflows/deployEAProd.yaml
+++ b/.github/workflows/deployEAProd.yaml
@@ -21,6 +21,6 @@ jobs:
     - name: Run Deploy
       run: scripts/deploy.sh EAForum {{ matrix.environment }}
       env: 
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.CEA_AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.CEA_AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: "us-east-1"
