--- a/.github/workflows/deployLWDevel.yaml
+++ b/.github/workflows/deployLWDevel.yaml
@@ -21,7 +21,7 @@ jobs:
         python-version: '>=3.5' # Version range or exact version of a Python version to use, using SemVer's version range syntax
     - run: pip3 install --upgrade pip awsebcli
     - name: Run Deploy
-      run: scripts/deploy.sh LessWrongExpress {{ matrix.environment }}
+      run: scripts/deploy.sh LessWrongExpress ${{ matrix.environment }}
       env: 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
